fix: update styles on mobile view

--- a/src/styles/master.css
+++ b/src/styles/master.css
@@ -227,11 +227,18 @@ form {
 .list{
     padding-left: 0;
     margin-left: 0;
+    display: flex;
+    flex-direction: column;
+    gap: var(--size-sm);
 }
 
 .note-item{
     display: flex;
     justify-content: space-between;
+
+    @media (max-width:500px) {
+        flex-direction: column;
+    }
 }
 
 .note-date{
